# super-battle-golf-rl

./: .gitignore  CLAUDE.md  README.md  STATUS.md  pyproject.toml
.claude/: settings.local.json
configs/: default.yaml
notebooks/: debugging.ipynb
scripts/: calibrate_menu.py  debug_overlay.py  record_gameplay.py  screenshot.py  start_game.py  test_actions.py  test_capture.py  test_detect.py  test_env.py  test_loop.py  test_navigate.py  test_pin_detect.py  test_progress.py  test_stance.py  test_window.py
scripts/tools/: annotate.py  debug_overlay.py  live_cnn.py  record_gameplay.py  reorder_frames.py  screenshot.py  start_game.py  view_augmentations.py  visualize_architecture.py  visualize_predictions.py
scripts/training/: train.py  train_icons.py
src/sbg/: actions.py  capture.py  detect.py  env.py  navigate.py  reward.py  train.py
src/sbg/game/: __init__.py  actions.py  capture.py  navigate.py  window.py
src/sbg/models/: __init__.py  dataset.py  icon_net.py  loss.py
src/sbg/vision/: __init__.py  detect.py
