[project]
name = "super-battle-golf-rl"
version = "0.1.0"
description = "RL agent that learns to play Super Battle Golf via screen capture"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium",
    "stable-baselines3",
    "torch",
    "opencv-python",
    "dxcam",
    "mss",
    "pydirectinput",
    "pillow",
    "numpy",
    "pyyaml",
    "tensorboard",
    "pywin32>=311",
]

[project.scripts]
train = "sbg.train:main"

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
